# katas

./: .gitignore  README
ActorsAndGtk/: actors-gtk.cabal
ActorsAndGtk/src/: Main.hs
Auction/: Auction.hs  Auction.org
GameOfLife/: README  build.sbt
GameOfLife/data/: simple.txt
GameOfLife/src/main/scala/gameoflife/: GameOfLife.scala  Main.scala  Mani.scala
KataPotter/: README  katapotter.cabal
KataPotter/src/: KattaPotter.hs  Main.hs
KataPotter/test/: Test.hs
LambdaTheGathering/: gathering.cabal
LambdaTheGathering/src/haskell/: Client.hs  Server.hs
LambdaTheGathering/src/haskell/gen-hs/: GameState.hs  GameState_Client.hs  GameState_Iface.hs  Service_Consts.hs  Service_Types.hs
LambdaTheGathering/src/thrift/: service.thrift
LambdaTheGathering/test/haskell/: Test.hs
LambdaTheGathering/test/resources/: Orders.txt
LoveTriangle/: README  lovetriangle.cabal
LoveTriangle/src/: LoveTriangle.hs
LoveTriangle/test/: Test.hs
